--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic-native/splash-screen": "4.7.0",
     "@ionic-native/status-bar": "4.7.0",
     "@ionic/storage": "^2.1.3",
+    "angular-in-memory-web-api": "^0.6.0",
     "cordova-plugin-geolocation": "^4.0.1",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
