--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ionic/storage": "^2.1.3",
     "angular-in-memory-web-api": "^0.6.0",
     "cordova-plugin-geolocation": "^4.0.1",
+    "cordova-sqlite-storage": "^2.3.2",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
@@ -43,7 +44,8 @@
     "plugins": {
       "cordova-plugin-geolocation": {
         "GEOLOCATION_USAGE_DESCRIPTION": "To locate you"
-      }
+      },
+      "cordova-sqlite-storage": {}
     }
   }
 }
